--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "proto-personal",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://claytonpassmore.github.io",
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
