--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "proto-personal",
+  "name": "resume",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://claytonpassmore.github.io/resume",
   "dependencies": {
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-scripts": "^3.3.0"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,7 +16,7 @@
     "deploy": "npm run build && gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^1.2.0"
+    "gh-pages": "^3.0.0"
   },
   "browserslist": [
     ">0.2%",
